--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     flex-direction: row;
-    padding-left: 20px;
+    padding-left: 5%;
     background-color: cornflowerblue;
 }
 
