--- a/src/css/Check.css
+++ b/src/css/Check.css
@@ -29,6 +29,12 @@ h1{
     height: 40px;
 }
 
+#send{
+    width: 230px;
+    height: 40px;
+    margin-bottom: 20px;
+}
+
 .opp{
     display: flex;
     flex-direction: row;
