--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,16 +1,22 @@
 .header{
     display: flex;
-    flex-direction: row;
-    padding-left: 5%;
+    flex-direction: column;
     background-color: cornflowerblue;
 }
 
 .link-buttons{
-    margin-left: 100px;
-    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    padding-left: 29%;
+    background-color: #337ab7;
 }
 
-.stick{
-    position: sticky;
-    bottom: 0;
+.title{
+    padding-left: 30%;
+    font-size: 40px;
+}
+
+.header_button{
+    border-color: #337ab7 !important;
+
 }
