--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -20,3 +20,11 @@
     border-color: #337ab7 !important;
 
 }
+
+.outer_container{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.ReactTable{
+}
