Possible to add text to patient questions. Possible to change between patient and center when manageing questions

--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -29,3 +29,8 @@ select{
 select[multiple], select[size]{
     min-height: 300px;
 }
+
+.add_category{
+    display: flex;
+    flex-direction: row;
+}
