Small changes made to make pilot work. Posibility to remove categories

--- a/src/css/New.css
+++ b/src/css/New.css
@@ -53,3 +53,8 @@ span{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.back_to_form{
+    margin-left: 40%;
+    top: 0;
+}
