--- a/src/css/Recommendation.css
+++ b/src/css/Recommendation.css
@@ -2,12 +2,16 @@
     display: flex;
     flex-direction: row;
     width: 80vw;
-    margin-left: 10vw;
+    margin-left: 7vw;
 }
 
 .place{
-    margin-right: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
+    width: 350px;
 }
+
+
 
 @media only screen and (max-width: 800px) {
 
