--- a/src/css/Admin.css
+++ b/src/css/Admin.css
@@ -37,5 +37,12 @@ select[multiple], select[size]{
 
 .add_category{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.display_box, .add_category, .manage_outer_container{
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-bottom: 1px solid black;
+    width: 80vw;
 }
